fix: image display none on mobile

--- a/mdi-react/src/components/core/LC/LC_bigImage.module.scss
+++ b/mdi-react/src/components/core/LC/LC_bigImage.module.scss
@@ -12,6 +12,6 @@
 
 @media only screen and (max-width: 810px) {
   #treeWorld {
-    visibility: hidden;
+    display: none;
   }
 }
